# skkoa-web

./: 404.html  README.md  index.html  script.js  style.css
compiler/: CMakeLists.txt  README.md  compiler.css  compiler.js  index.html
compiler/download/: skkoa-install.sh  skkoa-macos.command  skkoa-windows.cmd  skkoa-windows.ps1
compiler/examples/: array.koa  array_literal.koa  char.koa  condition.koa  float.koa  function.koa  function_params.koa  hello.koa  input.koa  loop.koa  math_module.koa  memory.koa  module.koa  pointer.koa  pointer_write.koa  queue.koa  repeat.koa  stack.koa  stdlib_strings.koa  string_input.koa  strings.koa  struct.koa  structures_usage.koa  variables.koa
compiler/lib/: queue.koa  stack.koa  structures.koa
compiler/src/: Ast.hpp  CodeGenerator.cpp  CodeGenerator.hpp  ErrorReporter.cpp  ErrorReporter.hpp  Lexer.cpp  Lexer.hpp  Parser.cpp  Parser.hpp  SemanticAnalyzer.cpp  SemanticAnalyzer.hpp  Token.hpp  main.cpp
compiler/tests/: invalid_syntax.koa  run_tests.sh  undefined_variable.koa
docs/: docs.css  docs.js  index.html  markdown.css
docs/text/: arrays.md  compiler.md  control-flow.md  data-structures.md  examples.md  functions.md  getting-started.md  grammar.md  index.md  introduction.md  pointers.md  standard-library.md  strings.md  syntax.md  types.md  variables.md
download/: download.css  index.html
